fix gap

--- a/project7/styles.css
+++ b/project7/styles.css
@@ -29,7 +29,7 @@ body {
 .logo-section img {
     width: 400px;
     max-width: 100%;
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 .row {
